Bug #17559 ndb_gis test failure
Submitted: 19 Feb 2006 20:57 Modified: 23 Feb 2006 4:45
Reporter: Brian Aker
Status: Closed
Category:Server: Cluster Severity:S3 (Non-critical)
Version:5.1.7-BK OS:
Assigned to: Tomas Ulin Target Version:

[19 Feb 2006 20:57] Brian Aker
Description:
ndb_gis                        [ fail ]

Errors are (from /home/brian/mysql/dep-5.1/mysql-test/var/log/mysqltest-time) :
mysqltest: In included file "./include/gis_generic.inc": At line 11: query 'CREATE TABLE
gis_point  (fid INTEGER, g POINT)' failed: 2013: Lost connection to MySQL server during
query
(the last lines may be the most important ones)

How to repeat:
Rerun the mysql test system.
[20 Feb 2006 11:41] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/2896
[20 Feb 2006 12:45] Tomas Ulin
breating blob tables without a primary key and with binlog enabled did not work properly. 
unpredictable error, sometimes mysqld cored.

pushed into 5.1.8
[20 Feb 2006 23:30] Tomas Ulin
included in 5.1.7 (not 5.1.8 as prev comment says)
[23 Feb 2006 4:45] Paul DuBois
Noted in 5.1.7 changelog.

Creating <literal>NDB</literal> tables containing
<literal>BLOB</literal> columns but no primary key caused
unpredictable behavior. (Bug #17559)