Bug #17559 ndb_gis test failure - test tables use blobs without PK, and was not handled correctly